--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,
+    "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^5.5.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -18,6 +19,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "daisyui": "^3.8.2",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -32,7 +34,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "js-cookie": "^3.0.5",
     "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
@@ -54,7 +56,7 @@
     "set": "^1.1.1",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
+"tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
