--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
     "uuid": "^9.0.1"
